fix max width to prevent wrapping section
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/gus4@72947 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -92,7 +92,7 @@ h4 {
 }
 
 .GeneOverviewRight {
-  max-width: calc(100% - 480px);
+  max-width: calc(100% - 535px);
 }
 
 .GeneOverviewLeft h1, .GeneOverviewRight .GeneOverviewProduct {
